[package]
name = "native-tic-tac-toe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.9"
solana-program = "1.15.2"

[features]
no-entrypoint = []

[lib]
name = "tic_tac_toe"
crate-type = ["cdylib", "lib"]